@@ -15,6 +15,10 @@ compiz (1:0.9.12.2+16.04.20160415-0ubuntu2) UNRELEASED; urgency=medium
   * Window: call stateChangeNotify when compiz state changed but before
     changing the WM state (LP: #1521302)
 
+  [ Eleni Maria Stea ]
+  * Expo, Scale: add support for bottom offsets (LP: #1562346, LP:
+    #1573897)
+
  -- Andrea Azzarone <azzaronea@gmail.com>  Thu, 26 May 2016 01:56:18 +0200
 
 compiz (1:0.9.12.2+16.04.20160415-0ubuntu1) xenial; urgency=medium
